BNF.txt
expr := ("!")? equ
equ := rel ("==" rel | "!=" rel)*
rel := add ("<" add | ">" add | ">=" add | "<=" add)*
add := mul ('+' mul | '-' mul)*
mul := unary ('*' unary | '/' unary)*
unary := ("-")? primary
primary := int | '(' expr ')'
